--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "express": "^4.18.0",
-    "@supabase/supabase-js": "^2.24.0",
-    "body-parser": "^1.20.0",
+    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "node-fetch": "^2.6.7",
     "NeteaseCloudMusicApi": "^4.7.0"
   }
 }
+
